tests/parse_print/autogen/448~final/stderr.expected
Error:
    Parser error in file: tests/parse_print/autogen/448~final/spec.essence Error is:
ValidatorError tests/parse_print/autogen/448~final/spec.essence:4:29:
  |
4 | such that together({false}, partition({false}) - partition({false}))
  |                             ^^^^^^^^^^^^^^^^^^
Type error:
	Expected:"Number / set/ mset / relation / function"
	Got: partition from bool

tests/parse_print/autogen/448~final/spec.essence:4:50:
  |
4 | such that together({false}, partition({false}) - partition({false}))
  |                                                  ^^^^^^^^^^^^^^^^^^
Type error:
	Expected:"Number / set/ mset / relation / function"
	Got: partition from bool
